--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Doha Nasser</title>
+    <title>Jawhara Shop</title>
 
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -15,17 +15,50 @@
         <nav>
             <ul>
                 <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="#"><i class="fas fa-info"></i> About</a></li>
                 <li><a href="#"><i class="fas fa-tools"></i> Services</a></li>
-                <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
+                <li><a href="#"><i class="fas fa-phone-alt"></i> Contact</a></li>
             </ul>
+            <input type="text" placeholder="Search here..">
         </nav>
     </header>
     <main>
-        
+        <iframe class="video" src="https://www.youtube.com/embed/X-WID8oGySk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
+        <section class="contact" id="contact">
+            <div class="text">
+                <h1> Contact us</h1>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name"> <br>
+                    <input type="email" name="" id="" placeholder="Your Mail"> <br>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="your message"></textarea>
+                    <input type="submit">
+                </form>
+            </div>
+        </section>
+        <br>
+        <section class="contact" id="contact">
+            <div class="text">
+                <h1> Our Location</h1>
+                <p>Address: Thebes Academy, Maadi, Cairo Governorate</p>
+                <p>Phone: 01122334455</p>
+                <p>Email: Thebes@Academy.com</p>
+            </div>
+            <div class="text">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3455.9288441413237!2d31.234508959054747!3d29.981474875059643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145847bb3b1bcdc5%3A0x837142773e38271c!2z2KPZg9in2K_ZitmF2YrYqSDYt9mK2KjYqdiMINij2KvYsSDYp9mE2YbYqNmK2Iwg2YLYs9mFINiv2KfYsSDYp9mE2LPZhNin2YXYjCDZhdit2KfZgdi42Kkg2KfZhNmC2KfZh9ix2KnigKw!5e0!3m2!1sar!2seg!4v1691878642271!5m2!1sar!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2023 مجوهرات الجوهرة. All rights reserved.</p>
+        <div class="social ">
+            <a href="https://www.facebook.com/ " target="_blank "><i class="fab fa-facebook-f "></i></a>
+            <a href="https://twitter.com/ " target="_blank "><i class="fab fa-twitter "></i></a>
+            <a href="https://www.youtube.com/ " target="_blank "><i class="fab fa-youtube "></i></a>
+            <a href="https://www.instagram.com/ " target="_blank "><i class="fab fa-instagram "></i></a>
+            <a href="https://rss.com/ " target="_blank "><i class="fas fa-rss "></i></a>
+        </div>
+        <h2> Designed by: <b>Doha Nasser</b></h2>
+        <p>Copyrights &copy 2023 <b>Jawhara Shop</b>. All rights reserved.</p>
     </footer>
 </body>
 </html>
