--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">اهلا بكم فى مجوهرات الجوهرة</h1>
+        <h1 class="title">Welcome to Jawhara Shop</h1>
         <nav>
             <ul>
                 <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
