--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Jawhara Shop</title>
 
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
+
 <body>
     <header>
         <h1 class="title">Welcome to Jawhara Shop</h1>
@@ -23,7 +25,19 @@
         </nav>
     </header>
     <main>
-        <iframe class="video" src="https://www.youtube.com/embed/X-WID8oGySk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="image-container">
+            <img src="images/image1.jpg">
+            <img src="images/image2.jpg">
+            <img src="images/image3.jpg">
+            <img src="images/image4.jpg">
+            <img src="images/image5.jpg">
+            <img src="images/image6.jpg">
+            <img src="images/image7.jpg">
+        </div>
+        <iframe class="video" src="https://www.youtube.com/embed/X-WID8oGySk" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
         <br>
         <section class="contact" id="contact">
             <div class="text">
@@ -45,7 +59,10 @@
                 <p>Email: Thebes@Academy.com</p>
             </div>
             <div class="text">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3455.9288441413237!2d31.234508959054747!3d29.981474875059643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145847bb3b1bcdc5%3A0x837142773e38271c!2z2KPZg9in2K_ZitmF2YrYqSDYt9mK2KjYqdiMINij2KvYsSDYp9mE2YbYqNmK2Iwg2YLYs9mFINiv2KfYsSDYp9mE2LPZhNin2YXYjCDZhdit2KfZgdi42Kkg2KfZhNmC2KfZh9ix2KnigKw!5e0!3m2!1sar!2seg!4v1691878642271!5m2!1sar!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3455.9288441413237!2d31.234508959054747!3d29.981474875059643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145847bb3b1bcdc5%3A0x837142773e38271c!2z2KPZg9in2K_ZitmF2YrYqSDYt9mK2KjYqdiMINij2KvYsSDYp9mE2YbYqNmK2Iwg2YLYs9mFINiv2KfYsSDYp9mE2LPZhNin2YXYjCDZhdit2KfZgdi42Kkg2KfZhNmC2KfZh9ix2KnigKw!5e0!3m2!1sar!2seg!4v1691878642271!5m2!1sar!2seg"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
@@ -61,4 +78,5 @@
         <p>Copyrights &copy 2023 <b>Jawhara Shop</b>. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
