--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Jawhara Shop</title>
 
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
