--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Jawhara Shop</title>
+    <link rel="icon" href="images/logo.jpg">
+    <title>Jawhara Shop | متجر الچوهرة</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -13,34 +14,40 @@
 
 <body>
     <header>
-        <h1 class="title">Welcome to Jawhara Shop</h1>
+        <a href="https://dohanasser23.github.io/Jawhara-Shop"><img src="images/logo.jpg" class="logo"></a>
         <nav>
             <ul>
-                <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="#"><i class="fas fa-info"></i> About</a></li>
-                <li><a href="#"><i class="fas fa-tools"></i> Services</a></li>
-                <li><a href="#"><i class="fas fa-phone-alt"></i> Contact</a></li>
+                <li><a href="https://dohanasser23.github.io/Jawhara-Shop"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#About"><i class="fas fa-info"></i> About</a></li>
+                <li><a href="#Services"><i class="fas fa-tools"></i> Services</a></li>
+                <li><a href="#Contact"><i class="fas fa-phone-alt"></i> Contact</a></li>
             </ul>
-            <input type="text" placeholder="Search here..">
         </nav>
+        <input type="text" placeholder="Search here..         ..إبحث هنا">
     </header>
     <main>
-        <div class="image-container">
-            <img src="images/image1.jpg">
-            <img src="images/image2.jpg">
-            <img src="images/image3.jpg">
-            <img src="images/image4.jpg">
-            <img src="images/image5.jpg">
-            <img src="images/image6.jpg">
-            <img src="images/image7.jpg">
+        <div style="text-align: center;">
+            <h1 class="title">Jawhara Shop</h1>
+            <img class="slogan"
+                src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&pause=1000&background=86868684&center=true&vCenter=true&width=450&lines=Radiate+Elegance+%F0%9F%92%8E+Embrace+Beauty">
         </div>
+        <br>
+        <div id="Services" class="image-container">
+            <img src="images/image01.jpg">
+            <img src="images/image02.jpg">
+            <img src="images/image03.jpg">
+            <img src="images/image04.jpg">
+            <img src="images/image05.jpg">
+            <img src="images/image06.jpg">
+        </div>
+        <br>
         <iframe class="video" src="https://www.youtube.com/embed/X-WID8oGySk" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         <br>
-        <section class="contact" id="contact">
-            <div class="text">
+        <section class="contact">
+            <div class="text" id="Contact">
                 <h1> Contact us</h1>
                 <form action="">
                     <input type="text" name="" id="" placeholder="Your Name"> <br>
@@ -51,15 +58,15 @@
             </div>
         </section>
         <br>
-        <section class="contact" id="contact">
-            <div class="text">
+        <section class="contact">
+            <div class="text" id="About">
                 <h1> Our Location</h1>
                 <p>Address: Thebes Academy, Maadi, Cairo Governorate</p>
                 <p>Phone: 01122334455</p>
                 <p>Email: Thebes@Academy.com</p>
             </div>
             <div class="text">
-                <iframe
+                <iframe class="map"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3455.9288441413237!2d31.234508959054747!3d29.981474875059643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145847bb3b1bcdc5%3A0x837142773e38271c!2z2KPZg9in2K_ZitmF2YrYqSDYt9mK2KjYqdiMINij2KvYsSDYp9mE2YbYqNmK2Iwg2YLYs9mFINiv2KfYsSDYp9mE2LPZhNin2YXYjCDZhdit2KfZgdi42Kkg2KfZhNmC2KfZh9ix2KnigKw!5e0!3m2!1sar!2seg!4v1691878642271!5m2!1sar!2seg"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -74,8 +81,8 @@
             <a href="https://www.instagram.com/ " target="_blank "><i class="fab fa-instagram "></i></a>
             <a href="https://rss.com/ " target="_blank "><i class="fas fa-rss "></i></a>
         </div>
-        <h2> Designed by: <b>Doha Nasser</b></h2>
-        <p>Copyrights &copy 2023 <b>Jawhara Shop</b>. All rights reserved.</p>
+        <h2> Designed by: <b id="mark">Doha Nasser</b></h2>
+        <p>Copyrights &copy 2023 <b id="mark">Jawhara Shop</b>. All rights reserved.</p>
     </footer>
 </body>
 
